<resources>
    <string name="app_name">Csun Career Center</string>
    <string name="logIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="login_username">Enter your CSUN email address like example@my.csun.edu  and password to sign in</string>
    <string name="login_email">example@my.csun.edu</string>
    <string name="login_password">Password</string>
    <string name="login_confirm_password">Confirm Password</string>
    <string name="login_linkin">Sign in with linkin account</string>
    <string name="login_facebook">Sign in with Facebook account</string>
    <string name="sign_up_username">Please enter your CSUN email address (like example@my.csun.edu) and contact the CSUN Career Center for your temporary login password.\nCareer Center hours: M–TH 9–5 F 9–4, (818)677–2878 (use 123 as password for test)</string>
    <string name="signup_linkin">Sign up with linkin account</string>
    <string name="signup_facebook">Sign up with Facebook account</string>
    <string name="change_password">Enter your new password.New password should be at least 6 characters.</string>
    <string name="or">OR</string>
    <string name="invalid_userPass">Username or Password is incorrect, try again.</string>
    <string name="Both_filled">Both fields should be filled</string>
    <string name="same_value">Password and Confirm Password should contain same value.</string>
    <string name="save">Save to Favorite</string>
    <string name="apply">Apply on Company Site</string>
    <string name="job_description_title">Job Description</string>
    <string name="job_duties">Job Duties</string>
    <string name="essential_skills">Essential Skills</string>
    <string name="desired_skills">Desired Skills</string>

    <string name="profile_hp">Profile</string>
    <string name="search_hp">Search</string>
    <string name="my_career_center_hp">My Career Center</string>
    <string name="resources_hp">Resources</string>
    <string name="settings_hp">Settings</string>
    <string name="spinner_jobs">More</string>
    <string name="home_page">Home</string>

    <!-- Job menu -->
    <string name="title_A">All</string>
    <string name="title_MR">Major Related</string>
    <string name="title_FT">Full Time</string>
    <string name="title_PT">Part Time</string>
    <string name="title_I">Internships</string>
    <string name="title_At">Attending</string>
    <string name="search_by_jobtitle">Search by job title</string>

    <!-- Menu Drawer -->
    <string name="openDrawer">Open drawer</string>
    <string name="closeDrawer">CloseDrawer</string>
    <string name="empty_email_error_message">You should fill email address</string>
    <string name="empty_password_error_message">You should fill password</string>
    <string name="email_format_error">Your email format is not correct, it should be abc@my.csun.edu</string>
    <string name="password_incorrect_error">Password is not correct, try again</string>
    <string name="redundant_email">This email address is already registered. Make sure you type it correctly.</string>
    <string name="password_length">New password should be at least 6 characters</string>
    <string name="fill_email_field">You should fill email address</string>
    <string name="fill_pass_field">You should fill password</string>

    <string name="empty_email_error_message">You should fill email address</string>
    <string name="empty_password_error_message">You should fill password</string>
    <string name="email_format_error">Your email format is not correct, it should be abc@my.csun.edu</string>
    <string name="password_incorrect_error">Password is not correct, try again</string>
    <string name="redundant_email">This email address is already registered. Make sure you type it correctly.</string>
    <string name="password_length">New password should be at least 6 characters</string>
    <string name="fill_email_field">You should fill email address</string>
    <string name="fill_pass_field">You should fill password</string>


</resources>
