<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="2dp"
            android:text="@string/signup_username"
            android:textSize="@dimen/textsize" />

        <EditText
            android:id="@+id/sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:inputType="textEmailAddress"
            android:hint="@string/login_email"
            android:textSize="@dimen/textsize" />

        <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:inputType="textPassword"
            android:hint="@string/login_password"
            android:textSize="@dimen/textsize" />

        <Button
            android:id="@+id/sign_up_submit"
            style="@style/ButtonStyleFillIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:textAllCaps="false" />
    </LinearLayout>

</ScrollView>
